--- a/_includes/blocks/item-comments.html
+++ b/_includes/blocks/item-comments.html
@@ -3,18 +3,18 @@
 <div class="comment-addNew">
   <input class="comment-addNew__input" placeholder="use @username to notify">
   <div class="comment-addNew__actions">
-    <i>ओ</i>
-    <i>य</i>
+    <i></i>
+    <i></i>
   </div>
 </div>
 
-<div class="tabs tabs--gold">
+<div class="tabs">
   <div class="tabs-nav">
     <ul>
-      <span class="tab__active-link-bar"></span>
-      <li><a href="#" class="tabs-nav__link tabs-nav__link--active" tabindex="1">स</a></li>
-      <li><a href="#" class="tabs-nav__link" tabindex="2">ऑ</a></li>
-      <li><a href="#" class="tabs-nav__link" tabindex="3">झ</a></li>
+      <span class="tabs-nav__linkBar"></span>
+      <li><a href="#" class="tabs-nav__link tabs-nav__link--active" tabindex="1" style=""></a></li>
+      <li><a href="#" class="tabs-nav__link" tabindex="2"></a></li>
+      <li><a href="#" class="tabs-nav__link" tabindex="3"></a></li>
     </ul>
   </div>
 
@@ -59,7 +59,7 @@
             <div class="comment-posted__author">Jetro Wils</div>
           </header>
           <article class="comment-posted__message">
-            <p><span class="comment-posted__tagged">@System Administer</span> Sum of effort (B 5517,3 5520,8) ऴ</p>
+            <p><span class="comment-posted__tagged">@System Administer</span> Sum of effort (B 5517,3 5520,8) </p>
           </article>
           <footer class="comment-posted__footer">
             posted at <span class="comment-posted__post-time">13:53</span> on <span class="comment-posted__post-time">07/06/2017</span>
@@ -104,7 +104,7 @@
             <div class="comment-posted__author">Jetro Wils</div>
           </header>
           <article class="comment-posted__message">
-            <p><span class="comment-posted__tagged">@System Administer</span> Sum of effort (B 5517,3 5520,8) ऴ</p>
+            <p><span class="comment-posted__tagged">@System Administer</span> Sum of effort (B 5517,3 5520,8) </p>
           </article>
           <footer class="comment-posted__footer">
             posted at <span class="comment-posted__post-time">13:53</span> on <span class="comment-posted__post-time">07/06/2017</span>
@@ -149,7 +149,7 @@
             <div class="comment-posted__author">Jetro Wils</div>
           </header>
           <article class="comment-posted__message">
-            <p><span class="comment-posted__tagged">@System Administer</span> Sum of effort (B 5517,3 5520,8) ऴ</p>
+            <p><span class="comment-posted__tagged">@System Administer</span> Sum of effort (B 5517,3 5520,8) </p>
           </article>
           <footer class="comment-posted__footer">
             posted at <span class="comment-posted__post-time">13:53</span> on <span class="comment-posted__post-time">07/06/2017</span>
@@ -194,7 +194,7 @@
             <div class="comment-posted__author">Jetro Wils</div>
           </header>
           <article class="comment-posted__message">
-            <p><span class="comment-posted__tagged">@System Administer</span> Sum of effort (B 5517,3 5520,8) ऴ</p>
+            <p><span class="comment-posted__tagged">@System Administer</span> Sum of effort (B 5517,3 5520,8) </p>
           </article>
           <footer class="comment-posted__footer">
             posted at <span class="comment-posted__post-time">13:53</span> on <span class="comment-posted__post-time">07/06/2017</span>
@@ -239,7 +239,7 @@
             <div class="comment-posted__author">Jetro Wils</div>
           </header>
           <article class="comment-posted__message">
-            <p><span class="comment-posted__tagged">@System Administer</span> Sum of effort (B 5517,3 5520,8) ऴ</p>
+            <p><span class="comment-posted__tagged">@System Administer</span> Sum of effort (B 5517,3 5520,8) </p>
           </article>
           <footer class="comment-posted__footer">
             posted at <span class="comment-posted__post-time">13:53</span> on <span class="comment-posted__post-time">07/06/2017</span>
@@ -284,7 +284,7 @@
             <div class="comment-posted__author">Jetro Wils</div>
           </header>
           <article class="comment-posted__message">
-            <p><span class="comment-posted__tagged">@System Administer</span> Sum of effort (B 5517,3 5520,8) ऴ</p>
+            <p><span class="comment-posted__tagged">@System Administer</span> Sum of effort (B 5517,3 5520,8) </p>
           </article>
           <footer class="comment-posted__footer">
             posted at <span class="comment-posted__post-time">13:53</span> on <span class="comment-posted__post-time">07/06/2017</span>
@@ -329,7 +329,7 @@
             <div class="comment-posted__author">Jetro Wils</div>
           </header>
           <article class="comment-posted__message">
-            <p><span class="comment-posted__tagged">@System Administer</span> Sum of effort (B 5517,3 5520,8) ऴ</p>
+            <p><span class="comment-posted__tagged">@System Administer</span> Sum of effort (B 5517,3 5520,8) </p>
           </article>
           <footer class="comment-posted__footer">
             posted at <span class="comment-posted__post-time">13:53</span> on <span class="comment-posted__post-time">07/06/2017</span>
@@ -374,7 +374,7 @@
             <div class="comment-posted__author">Jetro Wils</div>
           </header>
           <article class="comment-posted__message">
-            <p><span class="comment-posted__tagged">@System Administer</span> Sum of effort (B 5517,3 5520,8) ऴ</p>
+            <p><span class="comment-posted__tagged">@System Administer</span> Sum of effort (B 5517,3 5520,8) </p>
           </article>
           <footer class="comment-posted__footer">
             posted at <span class="comment-posted__post-time">13:53</span> on <span class="comment-posted__post-time">07/06/2017</span>
@@ -419,7 +419,7 @@
             <div class="comment-posted__author">Jetro Wils</div>
           </header>
           <article class="comment-posted__message">
-            <p><span class="comment-posted__tagged">@System Administer</span> Sum of effort (B 5517,3 5520,8) ऴ</p>
+            <p><span class="comment-posted__tagged">@System Administer</span> Sum of effort (B 5517,3 5520,8) </p>
           </article>
           <footer class="comment-posted__footer">
             posted at <span class="comment-posted__post-time">13:53</span> on <span class="comment-posted__post-time">07/06/2017</span>
