--- a/sass/components/selector.scss
+++ b/sass/components/selector.scss
@@ -20,7 +20,7 @@
     .selector__item {
       -webkit-backface-visibility: hidden;
       backface-visibility: hidden;
-      
+
       &Seperator {
         background-color: transparent;
       }
@@ -112,6 +112,7 @@
     position: relative;
     display: inline-block;
     vertical-align: top;
+    z-index: 1;
     height: 26px;
     line-height: 26px;
     min-width: 26px;
