update signature to action

--- a/_includes/blocks/old-pmx-item-detail.html
+++ b/_includes/blocks/old-pmx-item-detail.html
@@ -322,7 +322,7 @@
                         solution tab
                     </div>
                     <div class="tab-content" tab-name="Bugs" style="display: none;">
-                        bug tab
+                      {% include blocks/itembox.html %}
                     </div>
                   </div>
 
