--- a/_includes/blocks/item-header.html
+++ b/_includes/blocks/item-header.html
@@ -16,13 +16,7 @@
 
         <div class="item-header__actions">
           <div class="item-header__action">
-            <div class="selector selector--singleselect">
-              <div class="selector__item selector__item--selected">
-                <div class="selector__block">
-                  <div class="selector__blockPart selector__blockPart--field"><sup></sup></div>
-                </div>
-              </div>
-            </div>
+            <div class="itemBox__action"><sup></sup></div>
           </div>
           <div class="item-header__action">
             <div class="selector selector--readonly">
