--- a/sass/components/itembox.scss
+++ b/sass/components/itembox.scss
@@ -299,6 +299,8 @@
     cursor: pointer;
     transition: all .3s ease-in-out;
     color: var(--color-primary);
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
 
     &:hover {
       transform: translateY(-2px);
