--- a/sass/components/itembox.scss
+++ b/sass/components/itembox.scss
@@ -296,6 +296,7 @@
   }
 
   &__action {
+    font-size: 16px;
     cursor: pointer;
     transition: all .3s ease-in-out;
     color: var(--color-primary);
