update field/itembox component

--- a/_layouts/present.html
+++ b/_layouts/present.html
@@ -9,6 +9,13 @@
   <body>
     {{ content }}
 
+    <div class="action-panel">
+      <ul>
+        <li>Loading cell</li>
+        <li>Loading table</li>
+      </ul>
+    </div>
+
     {% include foot.html %}
 
     <!-- Libraries -->
