--- a/_includes/blocks/app-nav-tab2.html
+++ b/_includes/blocks/app-nav-tab2.html
@@ -23,8 +23,8 @@
         <li class="itemBox__cell itemBox__cell--permalink">
           <div class="itemBox__cellInner JS_text">
 
-            <div class="selector selector--readonly">
-              <div class="selector__item">
+            <div class="selector selector--expanded">
+              <div class="selector__item selector__item--selected">
                 <div class="selector__block">
                   <div class="selector__blockPart selector__blockPart--label">{{item.label}}</div>
                   <div class="selector__blockSeperator"></div>
