--- a/_includes/blocks/popup/calendar/ms-calendar-row.html
+++ b/_includes/blocks/popup/calendar/ms-calendar-row.html
@@ -27,8 +27,8 @@
   <li class="itemBox__cell">
     <div class="itemBox__cellInner">
 
-      <div class="selector selector--readonly {{ dayClass }}">
-        <div class="selector__item">
+      <div class="selector selector--expanded {{ dayClass }}">
+        <div class="selector__item selector__item--selected">
           <div class="selector__block ">
             <div class="selector__blockPart selector__blockPart--field ">{{ day }}</div>
           </div>
