--- a/_includes/blocks/popup/include-exclude-selector.html
+++ b/_includes/blocks/popup/include-exclude-selector.html
@@ -12,7 +12,7 @@
 
 
 
-<div class="selector selector--expanded JS_selector">
+<div class="selector selector--singleselect selector--expanded JS_selector">
   <div class="selector__item JS_selectorItem  {{includeSelectedClass}} JS_itemBox__cellInner--inclExcl" data-filter="Include">
     <div class="selector__block">
       <div class="selector__blockPart selector__blockPart--label">Include</div>
