--- a/sass/shared.scss
+++ b/sass/shared.scss
@@ -20,6 +20,7 @@
 @import "blocks/applicable-slider.css";
 
 // Components
+@import "components/header.css";
 @import "components/field.css";
 @import "components/selector.css";
 @import "components/itembox.css";
