--- a/_includes/blocks/app-nav-tab1.html
+++ b/_includes/blocks/app-nav-tab1.html
@@ -28,8 +28,8 @@
           <li class="itemBox__cell itemBox__cell--permalink">
             <div class="itemBox__cellInner ">
 
-              <div class="selector selector--readonly">
-                <div class="selector__item">
+              <div class="selector selector--expanded">
+                <div class="selector__item selector__item--selected">
                   <div class="selector__block">
                     <div class="selector__blockPart selector__blockPart--field JS_text">{{item}}</div>
                   </div>
