--- a/_includes/blocks/item-header.html
+++ b/_includes/blocks/item-header.html
@@ -19,8 +19,8 @@
             <div class="itemBox__action"><sup></sup></div>
           </div>
           <div class="item-header__action">
-            <div class="selector selector--readonly">
-              <div class="selector__item">
+            <div class="selector selector--expanded">
+              <div class="selector__item selector__item--selected">
                 <div class="selector__block">
                   <div class="selector__blockPart selector__blockPart--field">Ongoing</div>
                 </div>
