--- a/_includes/blocks/popup/calendar/ms-calendar-header.html
+++ b/_includes/blocks/popup/calendar/ms-calendar-header.html
@@ -2,8 +2,8 @@
   <li class="itemBox__cell">
     <div class="itemBox__cellInner">
 
-      <div class="selector selector--readonly">
-        <div class="selector__item">
+      <div class="selector selector--expanded">
+        <div class="selector__item selector__item--selected">
           <div class="selector__block ">
             <div class="selector__blockPart selector__blockPart--field">←</div>
           </div>
@@ -28,8 +28,8 @@
   <li class="itemBox__cell align-right">
     <div class="itemBox__cellInner">
 
-      <div class="selector selector--readonly">
-        <div class="selector__item">
+      <div class="selector selector--expanded">
+        <div class="selector__item selector__item--selected">
           <div class="selector__block ">
             <div class="selector__blockPart selector__blockPart--field">→</div>
           </div>
