--- a/_includes/blocks/popup/ms-incl-excl-filter-sublist.html
+++ b/_includes/blocks/popup/ms-incl-excl-filter-sublist.html
@@ -3,8 +3,8 @@
     <li class="itemBox__cell">
       <div class="itemBox__cellInner JS_itemBox__cellInner--inclExcl" data-filter="Include">
 
-        <div class="selector selector--readonly">
-          <div class="selector__item">
+        <div class="selector selector--expanded">
+          <div class="selector__item selector__item--selected">
             <div class="selector__block">
               <span class="selector__blockPart selector__blockPart--label">Include</span>
             </div>
@@ -18,7 +18,7 @@
     <li class="itemBox__cell">
       <div class="itemBox__cellInner JS_itemBox__cellInner--inclExcl" data-filter="Exclude">
 
-        <div class="selector selector--readonly">
+        <div class="selector selector--expanded">
           <div class="selector__item">
             <div class="selector__block">
               <span class="selector__blockPart selector__blockPart--label">Exclude</span>
