--- a/_includes/blocks/popup/ms-tags-colors-color-sublist.html
+++ b/_includes/blocks/popup/ms-tags-colors-color-sublist.html
@@ -6,8 +6,8 @@
 
           <div class="itemBox__action">
 
-            <div class="selector selector--readonly">
-              <div class="selector__item">
+            <div class="selector selector--expanded">
+              <div class="selector__item selector__item--selected">
                 <div class="selector__block">
                   <span class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: {{item.color}};" data-color="{{item.color}}"></span>
                 </div>
