--- a/_includes/blocks/popup/ms-tags-colors-suggestions.html
+++ b/_includes/blocks/popup/ms-tags-colors-suggestions.html
@@ -5,8 +5,8 @@
         <div class="itemBox__cellInner JS_toggle--color">
 
           {% include javascript/colorToggle.html color=item.color %}
-          <div class="selector selector--readonly">
-            <div class="selector__item">
+          <div class="selector selector--expanded">
+            <div class="selector__item selector__item--selected">
               <div class="selector__block">
                 <div class="selector__blockPart selector__blockPart--field JS_text">{{item.name}}</div>
               </div>
