--- a/_includes/javascript/colorToggle.html
+++ b/_includes/javascript/colorToggle.html
@@ -1,4 +1,4 @@
-<div class="selector">
+<div class="selector selector--expanded">
   <div class="selector__item selector__item--selected">
     <div class="selector__block">
       <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: {{include.color}};" data-color="{{include.color}}"></div>
