--- a/_includes/javascript/newSelectedItem--unit.html
+++ b/_includes/javascript/newSelectedItem--unit.html
@@ -1,13 +1,13 @@
 <div class="itemBox__cellInner ${excludeClass} ${colorToggleTriggerInnerClass}">
 
   ${colorToggleHTML}
-  <div class="selector selector--readonly">
-    <div class="selector__item">
+  <div class="selector selector--expanded">
+    <div class="selector__item selector__item--selected">
       <div class="selector__block">
         ${colorPrefixHTML}
         <div class="selector__blockPart selector__blockPart--field JS_text">${textOfActionItem}</div>
       </div>
     </div>
   </div>
-  
+
 </div>
