--- a/_includes/popups/filter-date.html
+++ b/_includes/popups/filter-date.html
@@ -56,8 +56,8 @@
                 <div class="itemBox__cellInner">
                   <div class="itemBox__value">
 
-                    <div class="selector selector--readonly">
-                      <div class="selector__item">
+                    <div class="selector selector--expanded">
+                      <div class="selector__item selector__item--selected">
                         <div class="selector__block">
                           <div class="selector__blockPart selector__blockPart--field JS_text">next 2 weeks (12/03/18-25/03/18)</div>
                         </div>
@@ -79,7 +79,7 @@
                 <div class="itemBox__cellInner">
                   <div class="itemBox__value">
 
-                    <div class="selector selector--readonly">
+                    <div class="selector selector--expanded">
                       <div class="selector__item selector__item--selected">
                         <div class="selector__block">
                           <div class="selector__blockPart selector__blockPart--field JS_text">19/03/18-20/03/18</div>
@@ -124,7 +124,7 @@
                 <div class="itemBox__cellInner">
                   <div class="itemBox__value">
 
-                    <div class="selector selector--readonly">
+                    <div class="selector selector--expanded">
                       <div class="selector__item selector__item--selected">
                         <div class="selector__block">
                           <div class="selector__blockPart selector__blockPart--field JS_text">today</div>
@@ -147,7 +147,7 @@
                 <div class="itemBox__cellInner">
                   <div class="itemBox__value">
 
-                    <div class="selector selector--readonly">
+                    <div class="selector selector--expanded">
                       <div class="selector__item selector__item--selected">
                         <div class="selector__block">
                           <div class="selector__blockPart selector__blockPart--field JS_text">18/04/18</div>
@@ -204,7 +204,7 @@
               <div class="itemBox__value">
 
                 {% include blocks/popup/include-exclude-selector.html selected="exclude"%}
-                <div class="selector">
+                <div class="selector selector--expanded">
                   <div class="selector__item selector__item--selected">
                     <div class="selector__block">
                       <div class="selector__blockPart selector__blockPart--field JS_text">today</div>
@@ -245,7 +245,7 @@
               <div class="itemBox__value">
 
                 {% include blocks/popup/include-exclude-selector.html selected="exclude"%}
-                <div class="selector  JS_toggle--calendar">
+                <div class="selector selector--expanded JS_toggle--calendar">
                   <div class="selector__item selector__item--selected">
                     <div class="selector__block">
                       <div class="selector__blockPart selector__blockPart--field JS_text">18/04/18</div>
@@ -287,7 +287,7 @@
               <div class="itemBox__value">
 
                 {% include blocks/popup/include-exclude-selector.html selected="include"%}
-                <div class="selector">
+                <div class="selector selector--expanded">
                   <div class="selector__item selector__item--selected">
                     <div class="selector__block">
                       <div class="selector__blockPart selector__blockPart--field JS_text">19/03/18-20/03/18</div>
@@ -328,7 +328,7 @@
               <div class="itemBox__value">
 
                 {% include blocks/popup/include-exclude-selector.html selected="include"%}
-                <div class="selector">
+                <div class="selector selector--expanded">
                   <div class="selector__item selector__item--selected">
                     <div class="selector__block">
                       <div class="selector__blockPart selector__blockPart--field JS_text">next 2 weeks (12/03/18-25/03/18)</div>
