--- a/_includes/popups/filter-tags.html
+++ b/_includes/popups/filter-tags.html
@@ -56,8 +56,8 @@
             <div class="itemBox__cellInner">
               <div class="itemBox__value">
 
-                <div class="selector selector--readonly">
-                  <div class="selector__item">
+                <div class="selector selector--expanded">
+                  <div class="selector__item selector__item--selected">
                     <div class="selector__block">
                       <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #00bfff;" data-color="#00bfff"></div>
                       <div class="selector__blockPart selector__blockPart--field JS_text">Design</div>
@@ -84,8 +84,8 @@
             <div class="itemBox__cellInner">
               <div class="itemBox__value">
 
-                <div class="selector selector--readonly">
-                  <div class="selector__item">
+                <div class="selector selector--expanded">
+                  <div class="selector__item selector__item--selected">
                     <div class="selector__block">
                       <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51"></div>
                       <div class="selector__blockPart selector__blockPart--field JS_text">Marketing</div>
@@ -135,8 +135,8 @@
                 <div class="itemBox__cellInner">
                   <div class="itemBox__value">
 
-                    <div class="selector selector--readonly">
-                      <div class="selector__item">
+                    <div class="selector selector--expanded">
+                      <div class="selector__item selector__item--selected">
                         <div class="selector__block">
                           <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #f4ca16;" data-color="#f4ca16"></div>
                           <div class="selector__blockPart selector__blockPart--field JS_text">Front-end</div>
@@ -164,8 +164,8 @@
                 <div class="itemBox__cellInner">
                   <div class="itemBox__value">
 
-                    <div class="selector selector--readonly">
-                      <div class="selector__item">
+                    <div class="selector selector--expanded">
+                      <div class="selector__item selector__item--selected">
                         <div class="selector__block">
                           <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #e30022;" data-color="#e30022"></div>
                           <div class="selector__blockPart selector__blockPart--field JS_text">Back-end</div>
@@ -214,8 +214,9 @@
             <div class="itemBox__value">
 
               {% include blocks/popup/include-exclude-selector.html selected="include"%}
-              <div class="selector selector--readonly">
-                <div class="selector__item">
+
+              <div class="selector selector--expanded">
+                <div class="selector__item selector__item--selected">
                   <div class="selector__block">
                     <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #00bfff;" data-color="#00bfff"></div>
                     <div class="selector__blockPart selector__blockPart--field JS_text">Design</div>
@@ -239,8 +240,9 @@
             <div class="itemBox__value">
 
               {% include blocks/popup/include-exclude-selector.html selected="include"%}
-              <div class="selector selector--readonly">
-                <div class="selector__item">
+
+              <div class="selector selector--expanded">
+                <div class="selector__item selector__item--selected">
                   <div class="selector__block">
                     <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51"></div>
                     <div class="selector__blockPart selector__blockPart--field JS_text">Marketing</div>
@@ -264,8 +266,8 @@
             <div class="itemBox__value">
 
               {% include blocks/popup/include-exclude-selector.html selected="exclude"%}
-              <div class="selector selector--readonly">
-                <div class="selector__item">
+              <div class="selector selector--expanded">
+                <div class="selector__item selector__item--selected">
                   <div class="selector__block">
                     <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #f4ca16;" data-color="#f4ca16"></div>
                     <div class="selector__blockPart selector__blockPart--field JS_text">Front-end</div>
@@ -289,8 +291,8 @@
             <div class="itemBox__value">
 
               {% include blocks/popup/include-exclude-selector.html selected="exclude"%}
-              <div class="selector selector--readonly">
-                <div class="selector__item">
+              <div class="selector selector--expanded">
+                <div class="selector__item selector__item--selected">
                   <div class="selector__block">
                     <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #E30022;" data-color="#E30022"></div>
                     <div class="selector__blockPart selector__blockPart--field JS_text">Back-end</div>
