--- a/_includes/popups/ms-status.html
+++ b/_includes/popups/ms-status.html
@@ -36,8 +36,8 @@
           <div class="itemBox__cellInner">
             <div class="itemBox__value">
 
-              <div class="selector selector--readonly">
-                <div class="selector__item">
+              <div class="selector selector--expanded">
+                <div class="selector__item selector__item--selected">
                   <div class="selector__block">
                     <div class="selector__blockPart selector__blockPart--prefix JS_color--prefix" style="background-color: {{item.color}}">{{item.icon}}</div>
                     <div class="selector__blockPart selector__blockPart--field JS_text">{{item.name}}</div>
