--- a/_includes/popups/new-multiselect.html
+++ b/_includes/popups/new-multiselect.html
@@ -55,8 +55,8 @@
                 <div class="itemBox__cellInner ">
                   <div class="itemBox__value">
 
-                    <div class="selector selector--readonly">
-                      <div class="selector__item">
+                    <div class="selector selector--expanded">
+                      <div class="selector__item selector__item--selected">
                         <div class="selector__block">
                           <div class="selector__blockPart selector__blockPart--field JS_text">{{item}}</div>
                         </div>
@@ -103,8 +103,8 @@
             <div class="itemBox__value">
 
               {% include blocks/popup/include-exclude-selector.html selected="include"%}
-              <div class="selector selector--readonly">
-                <div class="selector__item">
+              <div class="selector selector--expanded">
+                <div class="selector__item selector__item--selected">
                   <div class="selector__block">
                     <div class="selector__blockPart selector__blockPart--field JS_text">{{item.name}}</div>
                   </div>
