--- a/_includes/popups/semsearch.html
+++ b/_includes/popups/semsearch.html
@@ -23,8 +23,8 @@
         <div class="itemBox__cellInner">
           <div class="itemBox__value">
 
-            <div class="selector selector--readonly">
-              <div class="selector__item">
+            <div class="selector selector--expanded">
+              <div class="selector__item selector__item--selected">
                 <div class="selector__block">
                   <span class="selector__blockPart selector__blockPart--label">Any</span>
                   <span class="selector__blockSeperator"></span>
@@ -43,8 +43,8 @@
         <div class="itemBox__cellInner">
           <div class="itemBox__value">
 
-            <div class="selector selector--readonly">
-              <div class="selector__item">
+            <div class="selector selector--expanded">
+              <div class="selector__item selector__item--selected">
                 <div class="selector__block">
                   <span class="selector__blockPart selector__blockPart--label">title</span>
                   <span class="selector__blockSeperator"></span>
@@ -63,8 +63,8 @@
         <div class="itemBox__cellInner">
           <div class="itemBox__value">
 
-            <div class="selector selector--readonly">
-              <div class="selector__item">
+            <div class="selector selector--expanded">
+              <div class="selector__item selector__item--selected">
                 <div class="selector__block">
                   <span class="selector__blockPart selector__blockPart--label">Assigned to</span>
                   <span class="selector__blockSeperator"></span>
@@ -83,8 +83,8 @@
         <div class="itemBox__cellInner">
           <div class="itemBox__value">
 
-            <div class="selector selector--readonly">
-              <div class="selector__item">
+            <div class="selector selector--expanded">
+              <div class="selector__item selector__item--selected">
                 <div class="selector__block">
                   <span class="selector__blockPart selector__blockPart--label">Priority</span>
                   <span class="selector__blockSeperator"></span>
