--- a/sass/components/itembox.scss
+++ b/sass/components/itembox.scss
@@ -24,16 +24,6 @@
 
       .itemBox {
         &__cell {
-          min-width: 60px;
-
-          &--action {
-            .itemBox {
-              &__action {
-                font-size: 24px;
-              }
-            }
-          }
-
           &--draggable {
             .itemBox__cellInner {
               color: #C79D54;
@@ -45,8 +35,14 @@
               position: relative;
               width: 100%;
               height: 40px;
-              background-color: #ffffff;
+              background-color: #FFF;
               box-shadow: inset 0 0 50px rgba(0,0,0,.3);
+            }
+          }
+
+          &Inner {
+            h2 {
+              font-size: 20px;
             }
           }
         }
@@ -219,10 +215,10 @@
     }
 
     &--foot {
-      overflow: hidden;
       height: 22px;
       line-height: 12px;
-      background: linear-gradient(to bottom, rgba(208,208,208,1) 0%,rgba(242,242,242,1) 50%,rgba(242,242,242,1) 100%);
+      background: #d9d9d9;
+      border-radius: 0 0 5px 5px;
 
       .itemBox {
         &__cell {
