added button to reset columnpicker

--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -10,6 +10,7 @@
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/filter.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/incl-excl-filter.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/sortable.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/reset-to-default.js"></script>
 
 <!-- Components -->
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/selector.js"></script>
