Making sure reset functionality is only visible when something happened (like adding/removing)

--- a/_includes/popups/multiSelector-columnpicker.html
+++ b/_includes/popups/multiSelector-columnpicker.html
@@ -1,4 +1,4 @@
-<div class="multiSelector JS_multiSelector--simpleText JS_multiSelector--textAction" id="multiSelector-columnpicker" style="margin-top: -50px;">
+<div class="multiSelector JS_multiSelector--simpleText JS_multiSelector--textAction JS_multiSelector--resetFunctionality" id="multiSelector-columnpicker" style="margin-top: -50px;">
 
   <div class="itemBox JS_itemBox">
     <ul class="itemBox__row">
@@ -10,7 +10,7 @@
     </ul>
   </div>
 
-  <div class="itemBox JS_itemBox--resetSuggestion">
+  <div class="itemBox JS_itemBox--resetSuggestion" style="display: none;">
     <ul class="itemBox__row itemBox__row--item itemBox__row--action JS_resetToDefault" reset-file="columnpicker">
       <li class="itemBox__cell itemBox__cell--action">
         <div class="itemBox__cellInner">
