--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -1,6 +1,3 @@
-
-
-
 <header class="header header--item">
   <div class="header__title">
     <div class="header__type header__type--bug">
@@ -29,13 +26,7 @@
 
 <header class="header header--section">
   <div class="header__title">
-    <h2>Verify the configuration against an add-in manifest (simulation/repair)<sup>5</sup></h2>
-  </div>
-  <div class="header__actions">
-    <div class="action disabled"></div>
-    <div class="action">Print</div>
-    <div class="action"></div>
-    <div class="action"><sup>0/3</sup></div>
+    <h2>Description</h2>
   </div>
 </header>
 
@@ -43,41 +34,29 @@
   <div class="header__title">
     <h2>Description</h2>
   </div>
+
+  <div class="header__actions">
+    <div class="action"></div>
+    <div class="action"></div>
+  </div>
 </header>
 
+<br><br><br><br>
 
+<header class="header header--table">
+  <div class="header__title">
+    <h2>Verify the configuration against an add-in manifest (simulation/repair)<sup>5</sup></h2>
+  </div>
+  <div class="header__actions">
+    <div class="action disabled"></div>
+    <div class="action">Print</div>
+    <div class="action"></div>
+    <div class="action JS_has-popup" data-popid="#multiSelector-columnpicker"></div>
+  </div>
+</header>
 
 <div class="itemBox">
-
-  <ul class="itemBox__row itemBox__row--h1">
-    <li class="itemBox__cell flex-grow-1">
-      <div class="itemBox__cellInner">
-        <h2 class="ellipsis">Lorem ipsum dolor sit amet<sup>43</sup></h2>
-      </div>
-    </li>
-    <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
-      <div class="itemBox__cellInner">
-        <div class="itemBox__action itemBox__action--disabled" title="refresh"></div>
-      </div>
-    </li>
-    <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
-      <div class="itemBox__cellInner">
-        <div class="itemBox__action" title="add"></div>
-      </div>
-    </li>
-    <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
-      <div class="itemBox__cellInner">
-        <div class="itemBox__action" title="link"></div>
-      </div>
-    </li>
-    <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_has-popup" data-popid="#multiSelector-columnpicker">
-      <div class="itemBox__cellInner">
-        <div class="itemBox__action" title="arrange columns"></div>
-      </div>
-    </li>
-  </ul>
-
-  <ul class="itemBox__row itemBox__row--h2">
+  <ul class="itemBox__row itemBox__row--thead">
     <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_expand">
       <div class="itemBox__cellInner">
         <div class="itemBox__action"></div>
@@ -106,8 +85,10 @@
     <li class="itemBox__cell">
       <div class="itemBox__cellInner">34342-34252345-342543523-343213124</div>
     </li>
-    <li class="itemBox__cell flex-grow-3 JS_has-popup" data-popid="#multiSelector-single">
+    <li class="itemBox__cell flex-grow-3">
       <div class="itemBox__cellInner">
+
+        <div class="itemBox__action itemBox__action--secondary itemBox__action--inline JS_has-popup" data-popid="#multiSelector-error">܌</div>
 
         <div class="selector selector--singleselect">
           <div class="selector__item selector__item--selected">
@@ -128,7 +109,7 @@
       </div>
     </li>
     <li class="itemBox__cell">
-      <div class="itemBox__cellInner">Contruction Reports</div>
+      <div class="itemBox__cellInner">Construction Reports</div>
     </li>
     <li class="itemBox__cell">
       <div class="itemBox__cellInner">34342-34252345-342543523-343213124</div>
@@ -139,7 +120,7 @@
         <div class="selector selector--singleselect">
           <div class="selector__item selector__item--selected">
             <div class="selector__block">
-              <span class="selector__blockPart selector__blockPart--field">11/17/2017</span>
+              <span class="selector__blockPart selector__blockPart--field">12/10/2018</span>
             </div>
           </div>
         </div>
@@ -148,36 +129,25 @@
     </li>
   </ul>
 
-  <div class="itemBox animate--fadein JS_itemBox--children">
-    <ul class="itemBox__row itemBox__row--h1">
-      <li class="itemBox__cell">
-        <div class="itemBox__cellInner">
-          <h2 class="ellipsis">Contruction Reports</h2>
-        </div>
-      </li>
-      <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
-        <div class="itemBox__cellInner">
-          <div class="itemBox__action itemBox__action--disabled"></div>
-        </div>
-      </li>
-      <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
-        <div class="itemBox__cellInner">
-          <div class="itemBox__action"></div>
-        </div>
-      </li>
-      <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
-        <div class="itemBox__cellInner">
-          <div class="itemBox__action"></div>
-        </div>
-      </li>
-      <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_has-popup" data-popid="#multiSelector-columnpicker">
-        <div class="itemBox__cellInner">
-          <div class="itemBox__action"></div>
-        </div>
-      </li>
-    </ul>
+  <ul class="itemBox__row itemBox__row--tfoot">
+    <li class="itemBox__cell">
+    </li>
+  </ul>
 
-    <ul class="itemBox__row itemBox__row--h2">
+  <div class="itemBox animate--fadein JS_itemBox--children">
+    <header class="header header--table">
+      <div class="header__title">
+        <h2>Construction Reports</h2>
+      </div>
+      <div class="header__actions">
+        <div class="action disabled"></div>
+        <div class="action">Print</div>
+        <div class="action"></div>
+        <div class="action JS_has-popup" data-popid="#multiSelector-columnpicker"></div>
+      </div>
+    </header>
+
+    <ul class="itemBox__row itemBox__row--thead">
       <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_expand">
         <div class="itemBox__cellInner">
           <div class="itemBox__action"></div>
@@ -240,94 +210,84 @@
         </div>
       </li>
     </ul>
-    {% include blocks/itembox-row.html %}
-    {% for i in (1..2) %}
-      <ul class="itemBox__row itemBox__row--item animate--loading">
-        <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_expand">
-          <div class="itemBox__cellInner">
-            <div class="itemBox__action"></div>
-          </div>
-        </li>
-        <li class="itemBox__cell">
-          <div class="itemBox__cellInner">Road constructions</div>
-        </li>
-        <li class="itemBox__cell">
-          <div class="itemBox__cellInner">lorem ipsum dolor sit amet</div>
-        </li>
-        <li class="itemBox__cell flex-grow-3">
-          <div class="itemBox__cellInner">
 
-            <div class="selector selector--expanded selector--multiselect JS_selector">
-              <div class="selector__item selector__item--selected JS_selectorItem">
-                <div class="selector__block">
-                  <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0bda51;"></div>
-                  <div class="selector__blockPart selector__blockPart--label">design</div>
-                  <div class="selector__blockSeperator"></div>
-                  <div class="selector__blockPart selector__blockPart--field">UI/UX</div>
-                </div>
-              </div>
-              <div class="selector__itemSeperator"></div>
-              <div class="selector__item selector__item--selected JS_selectorItem">
-                <div class="selector__block">
-                  <div class="selector__blockPart selector__blockPart--prefix" style="background-color: orange;"></div>
-                  <div class="selector__blockPart selector__blockPart--label">comp</div>
-                  <div class="selector__blockSeperator"></div>
-                  <div class="selector__blockPart selector__blockPart--field">IT</div>
-                </div>
-              </div>
-              <div class="selector__itemSeperator"></div>
-              <div class="selector__item JS_selectorItem">
-                <div class="selector__block">
-                  <div class="selector__blockPart selector__blockPart--prefix" style="background-color: blue;"></div>
-                  <div class="selector__blockPart selector__blockPart--label">dev</div>
-                  <div class="selector__blockSeperator"></div>
-                  <div class="selector__blockPart selector__blockPart--field">Back-end</div>
-                </div>
-              </div>
-              <div class="selector__itemSeperator"></div>
-              <div class="selector__item JS_selectorItem">
-                <div class="selector__block">
-                  <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #f4ca16;"></div>
-                  <div class="selector__blockPart selector__blockPart--label">status</div>
-                  <div class="selector__blockSeperator"></div>
-                  <div class="selector__blockPart selector__blockPart--field">Important</div>
-                </div>
+    {% include blocks/itembox-row.html %}
+
+    <ul class="itemBox__row itemBox__row--item animate--loading">
+      <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_expand">
+        <div class="itemBox__cellInner">
+          <div class="itemBox__action"></div>
+        </div>
+      </li>
+      <li class="itemBox__cell">
+        <div class="itemBox__cellInner">Road constructions</div>
+      </li>
+      <li class="itemBox__cell">
+        <div class="itemBox__cellInner">lorem ipsum dolor sit amet</div>
+      </li>
+      <li class="itemBox__cell flex-grow-3">
+        <div class="itemBox__cellInner">
+
+          <div class="selector selector--expanded selector--multiselect JS_selector">
+            <div class="selector__item selector__item--selected JS_selectorItem">
+              <div class="selector__block">
+                <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #0bda51;"></div>
+                <div class="selector__blockPart selector__blockPart--label">design</div>
+                <div class="selector__blockSeperator"></div>
+                <div class="selector__blockPart selector__blockPart--field">UI/UX</div>
               </div>
             </div>
+            <div class="selector__itemSeperator"></div>
+            <div class="selector__item selector__item--selected JS_selectorItem">
+              <div class="selector__block">
+                <div class="selector__blockPart selector__blockPart--prefix" style="background-color: orange;"></div>
+                <div class="selector__blockPart selector__blockPart--label">comp</div>
+                <div class="selector__blockSeperator"></div>
+                <div class="selector__blockPart selector__blockPart--field">IT</div>
+              </div>
+            </div>
+            <div class="selector__itemSeperator"></div>
+            <div class="selector__item JS_selectorItem">
+              <div class="selector__block">
+                <div class="selector__blockPart selector__blockPart--prefix" style="background-color: blue;"></div>
+                <div class="selector__blockPart selector__blockPart--label">dev</div>
+                <div class="selector__blockSeperator"></div>
+                <div class="selector__blockPart selector__blockPart--field">Back-end</div>
+              </div>
+            </div>
+            <div class="selector__itemSeperator"></div>
+            <div class="selector__item JS_selectorItem">
+              <div class="selector__block">
+                <div class="selector__blockPart selector__blockPart--prefix" style="background-color: #f4ca16;"></div>
+                <div class="selector__blockPart selector__blockPart--label">status</div>
+                <div class="selector__blockSeperator"></div>
+                <div class="selector__blockPart selector__blockPart--field">Important</div>
+              </div>
+            </div>
+          </div>
 
-          </div>
-        </li>
-      </ul>
-      <div class="itemBox JS_itemBox--children">
-      <ul class="itemBox__row itemBox__row--h1">
-        <li class="itemBox__cell">
-          <div class="itemBox__cellInner">
-            <h2 class="ellipsis">Contruction Reports</h2>
-          </div>
-        </li>
-        <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
-          <div class="itemBox__cellInner">
-            <div class="itemBox__action itemBox__action--disabled"></div>
-          </div>
-        </li>
-        <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
-          <div class="itemBox__cellInner">
-            <div class="itemBox__action"></div>
-          </div>
-        </li>
-        <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
-          <div class="itemBox__cellInner">
-            <div class="itemBox__action"></div>
-          </div>
-        </li>
-        <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_has-popup" data-popid="#multiSelector-columnpicker">
-          <div class="itemBox__cellInner">
-            <div class="itemBox__action"></div>
-          </div>
-        </li>
-      </ul>
+        </div>
+      </li>
+    </ul>
+    <ul class="itemBox__row itemBox__row--tfoot">
+      <li class="itemBox__cell">
+      </li>
+    </ul>
 
-      <ul class="itemBox__row itemBox__row--h2">
+    <div class="itemBox JS_itemBox--children">
+      <header class="header header--table">
+        <div class="header__title">
+          <h2>Construction Reports</h2>
+        </div>
+        <div class="header__actions">
+          <div class="action disabled"></div>
+          <div class="action">Print</div>
+          <div class="action"></div>
+          <div class="action JS_has-popup" data-popid="#multiSelector-columnpicker"></div>
+        </div>
+      </header>
+
+      <ul class="itemBox__row itemBox__row--thead">
         <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_expand">
           <div class="itemBox__cellInner">
             <div class="itemBox__action"></div>
@@ -356,19 +316,18 @@
       {% include blocks/itembox-row.html %}
       {% include blocks/itembox-row.html %}
 
-      <ul class="itemBox__row itemBox__row--foot">
+      <ul class="itemBox__row itemBox__row--tfoot">
         <li class="itemBox__cell">
           <div class="itemBox__cellInner font--xs">All <span>4</span> items loaded</div>
         </li>
       </ul>
     </div><!-- /.itemBox -->
-    {% endfor %}
 
     {% include blocks/itembox-row.html %}
     {% include blocks/itembox-row.html %}
     {% include blocks/popup/ms-load-more.html %}
 
-    <ul class="itemBox__row itemBox__row--foot">
+    <ul class="itemBox__row itemBox__row--tfoot">
       <li class="itemBox__cell">
         <div class="itemBox__cellInner font--xs">All <span>423</span> items loaded</div>
       </li>
@@ -381,7 +340,7 @@
   {% include blocks/itembox-row.html %}
   {% include blocks/popup/ms-load-more.html %}
 
-  <ul class="itemBox__row itemBox__row--foot">
+  <ul class="itemBox__row itemBox__row--tfoot">
     <li class="itemBox__cell">
       <div class="itemBox__cellInner font--xs">All <span>423</span> items loaded</div>
     </li>
@@ -393,23 +352,14 @@
 
 {% include popups/multiSelector-columnpicker.html %}
 
-<div class="multiSelector" id="multiSelector-single">
-  <div class="itemBox JS_itemBox">
-    <ul class="itemBox__row">
-      <li class="itemBox__cell">
-        <div class="itemBox__cellInner">
-          <input type="search" class="JS_filterInput" placeholder="filter through items">
-        </div>
-      </li>
-    </ul>
-  </div>
+<div class="multiSelector" id="multiSelector-error">
   <div class="itemBox">
     <ul class="itemBox__row itemBox__row--custom">
       <li class="itemBox__cell">
         <div class="itemBox__cellInner">
 
-          <div class="note note--info">
-            <p>Choose a date to finish this item.</p>
+          <div class="note note--error">
+            <p>Due date must be somewhere in the future.</p>
           </div>
 
         </div>
