--- a/sass/components/header.scss
+++ b/sass/components/header.scss
@@ -4,9 +4,27 @@
 .header {
   position: relative;
   background-color: #FFF;
-  border-top: 2px dashed #CCC;
-  border-bottom: 2px dashed #CCC;
   padding: 15px;
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: -2px;
+    left: 0;
+    border-top: 2px dashed #E6E6E6;
+    width: 100%;
+    z-index: 3;
+  }
+
+  &::after {
+    content: '';
+    position: absolute;
+    bottom: 0px;
+    left: 0;
+    border-bottom: 2px dashed #E6E6E6;
+    width: 100%;
+    z-index: 3;
+  }
 
   &__type {
     display: inline-block;
@@ -66,5 +84,11 @@
 
   &--section {
 
+  }
+
+  &--table {
+    &::after {
+      display: none;
+    }
   }
 }
