--- a/sass/old-pmx.scss
+++ b/sass/old-pmx.scss
@@ -342,9 +342,11 @@ table th.itemID {
 .overdue .safetyNet a {
     color: #d24 !important;
 }
+/*
 .disabled {
     color: #DFDFDF !important;
 }
+*/
 input[disabled="disabled"],
 textarea[disabled="disabled"],
 input.disabled,
