--- a/_includes/blocks/item-header.html
+++ b/_includes/blocks/item-header.html
@@ -1,61 +1,58 @@
-<header class="item-header">
+<header class="header header--item">
+  <input type="text" value="PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox END END END END END END" class="header__inputTitle">
+  <div class="header__title">
+    <div class="header__type header__type--bug">
+      <span class="header__label">Bug</span>
+      <span class="header__id">391441</span>
+    </div>
+    <h2>PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox END END END END END END<sup>15</sup></h2>
+  </div>
+  <div class="header__actions">
+    <div class="action disabled"></div>
+    <div class="action ">
 
-      <input type="text" class="item-header__input font--h2" value="PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox END END END END END END">
+      <sup></sup>
 
-      <div class="item-header__head">
-        <div class="item-header__meta">
-          <span class="item-header__type item-header__type--bug font--label">Bug</span>
-          <span class="item-header__id">391441</span>
-        </div>
-        <div class="item-header__title">
-          <h2 class="font--h2 ellipsis" title="PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox END END END END END END">PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox END END END END END END</h2>
+    </div>
+    <div class="action readonly">
+
+      <div class="selector selector--expanded">
+        <div class="selector__item selector__item--selected">
+          <div class="selector__block">
+            <div class="selector__blockPart selector__blockPart--field">Ongoing</div>
+          </div>
         </div>
       </div>
 
-      <div class="item-header__aside">
+    </div>
+    <div class="action">
 
-        <div class="item-header__actions">
-          <div class="item-header__action">
-            <div class="itemBox__action"><sup></sup></div>
-          </div>
-          <div class="item-header__action">
-            <div class="selector selector--expanded">
-              <div class="selector__item selector__item--selected">
-                <div class="selector__block">
-                  <div class="selector__blockPart selector__blockPart--field">Ongoing</div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="item-header__action">
-            <div class="selector selector--singleselect selector--expanded JS_selector">
-              <div class="selector__item selector__item--selected JS_selectorItem JS_toggle-progress">
-                <div class="selector__block">
-                  <div class="selector__blockPart selector__blockPart--prefix"></div>
-                </div>
-              </div>
-              <div class="selector__itemSeperator"></div>
-              <div class="selector__item  JS_selectorItem JS_toggle-comments">
-                <div class="selector__block">
-                  <div class="selector__blockPart selector__blockPart--prefix"><sup>11</sup></div>
-                </div>
-              </div>
-              <div class="selector__itemSeperator"></div>
-              <div class="selector__item JS_selectorItem">
-                <div class="selector__block">
-                  <div class="selector__blockPart selector__blockPart--prefix"></div>
-                </div>
-              </div>
-              <div class="selector__itemSeperator"></div>
-              <div class="selector__item JS_selectorItem">
-                <div class="selector__block">
-                  <div class="selector__blockPart selector__blockPart--prefix"></div>
-                </div>
-              </div>
-            </div>
+      <div class="selector selector--singleselect selector--expanded JS_selector">
+        <div class="selector__item selector__item--selected JS_selectorItem JS_toggle-progress">
+          <div class="selector__block">
+            <div class="selector__blockPart selector__blockPart--prefix"></div>
           </div>
         </div>
-
+        <div class="selector__itemSeperator"></div>
+        <div class="selector__item  JS_selectorItem JS_toggle-comments">
+          <div class="selector__block">
+            <div class="selector__blockPart selector__blockPart--prefix"><sup>11</sup></div>
+          </div>
+        </div>
+        <div class="selector__itemSeperator"></div>
+        <div class="selector__item JS_selectorItem">
+          <div class="selector__block">
+            <div class="selector__blockPart selector__blockPart--prefix"></div>
+          </div>
+        </div>
+        <div class="selector__itemSeperator"></div>
+        <div class="selector__item JS_selectorItem">
+          <div class="selector__block">
+            <div class="selector__blockPart selector__blockPart--prefix"></div>
+          </div>
+        </div>
       </div>
 
+    </div>
+  </div>
 </header>
