--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -1,4 +1,5 @@
 <header class="header header--item">
+  <input type="text" value="Multiple Element Scroll with 1 scrollbar" class="header__inputTitle">
   <div class="header__title">
     <div class="header__type header__type--bug">
       <span class="header__label">Bug</span>
@@ -78,14 +79,17 @@
       <div class="itemBox__cellInner"></div>
     </li>
     <li class="itemBox__cell itemBox__cell--permalink">
+      <input type="text" class="itemBox__input">
       <div class="itemBox__cellInner">
         <div class="itemBox__action">GOTO link</div>
       </div>
     </li>
     <li class="itemBox__cell">
+      <input type="text" class="itemBox__input">
       <div class="itemBox__cellInner">34342-34252345-342543523-343213124</div>
     </li>
     <li class="itemBox__cell flex-grow-3">
+      <input type="text" class="itemBox__input">
       <div class="itemBox__cellInner">
 
         <div class="itemBox__action itemBox__action--secondary itemBox__action--inline JS_has-popup" data-popid="#multiSelector-error">܌</div>
@@ -115,7 +119,7 @@
       <div class="itemBox__cellInner">34342-34252345-342543523-343213124</div>
     </li>
     <li class="itemBox__cell flex-grow-3">
-      <div class="itemBox__cellInner animate--loading">
+      <div class="itemBox__cellInner">
 
         <div class="selector selector--singleselect">
           <div class="selector__item selector__item--selected">
@@ -171,7 +175,7 @@
       <li class="itemBox__cell">
         <div class="itemBox__cellInner">lorem ipsum dolor sit amet</div>
       </li>
-      <li class="itemBox__cell itemBox__cell--focus">
+      <li class="itemBox__cell">
         <div class="itemBox__cellInner">lorem ipsum dolor sit amet</div>
       </li>
       <li class="itemBox__cell flex-grow-3">
