--- a/sass/components/header.scss
+++ b/sass/components/header.scss
@@ -26,6 +26,34 @@
     z-index: 3;
   }
 
+  &__inputTitle {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    margin: 15px 0;
+    padding: 0 15px;
+    background-color: #FFF;
+    z-index: 1;
+    opacity: 0;
+    font-size: 20px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+
+    &:focus {
+      height: 100%;
+      margin: 0;
+      padding: 46px 15px 15px;
+      opacity: 1;
+      box-shadow: 0 0 100px rgba(0, 0, 0, 0.2);
+
+      ~ .header__actions {
+        z-index: 0;
+      }
+    }
+  }
+
   &__type {
     display: inline-block;
     margin: 0 0 0 -15px;
