update tooltip and description fields

--- a/_includes/blocks/breadcrumbs.html
+++ b/_includes/blocks/breadcrumbs.html
@@ -10,8 +10,8 @@
         </div>
       </div>
 
-      <div class="link">
-        <a href="#">{{item.name}}</a>
+      <div class="inline">
+        <a href="#" class="link">{{item.name}}</a>
       </div>
 
       <div class="breadcrumbs__seperator">/</div>
