--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -92,7 +92,7 @@
       <input type="text" class="itemBox__input">
       <div class="itemBox__cellInner">
 
-        <div class="itemBox__action itemBox__action--secondary itemBox__action--inline JS_has-popup" data-popid="#multiSelector-error">܌</div>
+        <div class="itemBox__action itemBox__action--secondary itemBox__action--inline JS_has-popup" data-popid="#multiSelector-error"></div>
 
         <div class="selector selector--singleselect">
           <div class="selector__item selector__item--selected">
