--- a/sass/components/itembox.scss
+++ b/sass/components/itembox.scss
@@ -286,6 +286,11 @@
     .selector {
       vertical-align: top;
     }
+
+    .note {
+      border-radius: 0;
+      width: 100%;
+    }
   }
 
   &__input {
