fixed position of columnpicker

--- a/_includes/popups/multiSelector-columnpicker.html
+++ b/_includes/popups/multiSelector-columnpicker.html
@@ -1,4 +1,4 @@
-<div class="multiSelector JS_multiSelector--simpleText JS_multiSelector--textAction JS_multiSelector--resetFunctionality" id="multiSelector-columnpicker" style="margin-top: -50px;">
+<div class="multiSelector JS_multiSelector--simpleText JS_multiSelector--textAction JS_multiSelector--resetFunctionality" id="multiSelector-columnpicker">
 
   <div class="itemBox JS_itemBox">
     <ul class="itemBox__row">
@@ -19,7 +19,7 @@
       </li>
     </ul>
   </div>
-  
+
   <div class="itemBox JS_itemBox">
     <ul class="itemBox__row itemBox__row--item JS_selectionTitle">
       <li class="itemBox__cell itemBox__cell--action JS_toggle">
