--- a/sass/components/note.scss
+++ b/sass/components/note.scss
@@ -5,7 +5,7 @@
   position: relative;
   display: inline-block;
   padding: 7px 10px;
-  background-color: #F8FAFC;
+  background-color: #F9F9F9;
   border-radius: 3px;
 
   &--tooltip {
